exentds the GetFriendlyName with the DevicePathId cause I have multiple cameras with the same name
 Changes to be committed:
	modified:   src/Hompus.VideoInputDevices/Hompus.VideoInputDevices.csproj
	modified:   src/Hompus.VideoInputDevices/SystemDeviceEnumerator.cs
	modified:   src/Hompus.VideoInputDevices/VideoInputDevice.cs

--- a/src/Hompus.VideoInputDevices/Hompus.VideoInputDevices.csproj
+++ b/src/Hompus.VideoInputDevices/Hompus.VideoInputDevices.csproj
@@ -11,10 +11,11 @@
     <Company>Hompus</Company>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutputPath>..\bin\x64</OutputPath>
   </PropertyGroup>
 
 </Project>
